@@ -1,3 +1,8 @@
+2010-02-17  Mario Carrion  <mario@carrion.mx>
+
+	* barecity_1.5/comments.php: 
+	* barecity_1.5/style.css: Gravatar support added.
+
 2010-01-21  Mario Carrion  <mario@carrion.mx>
 
 	* barecity_1.5/style.css: Added left, right and centered. Img.
